--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>Our Love Story</title>
@@ -23,7 +23,7 @@
 				<span class="space"><span class="comments">* I'm a person who is not good at speech!</span><br />
 				<span class="space"><span class="comments">* So,I choose my way to mark our story.</span><br />
 				<span class="space"><span class="comments">*/</span><br /><br />
-				<span class="keyword">We were growing up in the same area.</span><br />
+				<span class="keyword">We were growing up in the same one town.</span><br />
 				<span class="keyword">So we know each other's name.</span><br />
 				<span class="keyword">But I don't know about you and you don't konw about me.</span><br />
 				<span class="comments">//It lasted for 23 years.</span><br /><br />
