--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		
 		<div id="copyright">
 			<!--Inspired by <a href="https://github.com/hackerzhou/Love">hackerzhou’s</a> project.<br />-->
-			Copyright ©2014 <a href='http://love.ick.im'>ick.im</a><br />
+			Copyright ©2014 <a href='http://ick.im'>ick.im</a><br />
 		</div>
 	</div>
 	<script type="text/javascript">
